// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Order Order props 1`] = `
<div
  className="Order"
>
  <div
    className="Order-header"
  >
    <span
      className="Order-shop"
    >
      ozon
    </span>
    <span
      id="date"
    >
      26 декабря, пн, 2000 год
    </span>
  </div>
  <div
    className="Order-items"
  >
    <div
      className="Order-item"
      key="0"
    >
      1234
    </div>
    <div
      className="Order-item"
      key="1"
    >
      2374123
    </div>
  </div>
</div>
`;

exports[`Order order.items empty 1`] = `
<div
  className="Order"
>
  <div
    className="Order-header"
  >
    <span
      className="Order-shop"
    >
      ozon
    </span>
    <span
      id="date"
    >
      26 декабря, пн, 2000 год
    </span>
  </div>
  <div
    className="Order-items"
  />
</div>
`;

exports[`Order render no props 1`] = `""`;

exports[`Order undefined order.items 1`] = `
<div
  className="Order"
>
  <div
    className="Order-header"
  >
    <span
      className="Order-shop"
    >
      ozon
    </span>
    <span
      id="date"
    >
      26 декабря, пн, 2000 год
    </span>
  </div>
  <div
    className="Order-items"
  />
</div>
`;

exports[`Order undefined order.shops and order.date 1`] = `""`;
